--- a/index.html
+++ b/index.html
@@ -2,9 +2,47 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="trello.css" />
+    <title>ToDo</title>
   </head>
-  <body></body>
+  <body class="intro" id="intro">
+    <!-- modal -->
+    <div class="modal" id="todo_form">
+      <div class="header">
+        <div class="title">Add task</div>
+        <button class="btn close-modal">&times;</button>
+      </div>
+      <div class="body">
+        <input type="text" id="todo_input" />
+        <input type="submit" value="Add" id="todo_submit" />
+      </div>
+    </div>
+    <!-- todo -->
+    <div class="todo-container">
+      <div class="status" id="no_status">
+        <h1>Tasks:</h1>
+        <button id="add_btn" data-target-modal="#todo_form">Add</button>
+        <div class="todo" draggable="true">
+          Your task
+          <span class="close">&times;</span>
+        </div>
+      </div>
+      <div class="status">
+        <h1>Accepted:</h1>
+      </div>
+      <div class="status">
+        <h1>In process:</h1>
+      </div>
+      <div class="status">
+        <h1>Done:</h1>
+      </div>
+    </div>
+
+    <div id="overlay"></div>
+    <script src="./three.min.js"></script>
+    <script src="./vanta.clouds.min.js"></script>
+
+    <script src="trello.js"></script>
+  </body>
 </html>
